Fixing Spacing for Source Code Link

--- a/assignments/Responsive/assignment3.css
+++ b/assignments/Responsive/assignment3.css
@@ -10,7 +10,7 @@ table {
 
 /* https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs */
 
-body {font-family: Arial;}
+/* body {font-family: Arial;} */
 
 /* Style the tab */
 .tab {
@@ -213,7 +213,7 @@ div.carousel {
   /* Vertical Tabs - https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_vertical_tabs */
 
   * {box-sizing: border-box}
-  body {font-family: "Lato", sans-serif;}
+  /* body {font-family: "Lato", sans-serif;} */
 
   /* Style the tab */
   .tab {
